<resources>
	<string name="jh_app_name">JiaHeLogistic</string>

	<!-- 状态 -->
	<string name="jh_state_http_timeout">Timeout, please try later</string>
	<string name="jh_state_no_internet">Check your internet</string>
	<string name="jh_state_http_not_found">Not found</string>

	<!-- Strings related to login -->
	<string name="jh_prompt_email">Email</string>
	<string name="jh_prompt_password">Password (optional)</string>
	<string name="jh_action_sign_in">Sign in</string>
	<string name="jh_action_register">Register</string>
	<string name="jh_error_invalid_email">This email address is invalid</string>
	<string name="jh_error_invalid_password">This password is too short</string>
	<string name="jh_error_incorrect_password">This password is incorrect</string>
	<string name="jh_error_field_required">This field is required</string>
	<string name="jh_permission_rationale">"Contacts permissions are needed for providing email
		completions."
	</string>
	<string name="jh_title_activity_main">JiaHeLogistic</string>
	<string name="jh_action_settings">Settings</string>
	<string name="jh_section_format">Hello World from section: %1$d</string>
	<string name="jh_title_activity_settings">Settings</string>

	<!-- Strings related to Settings -->

	<!-- Example General settings -->
	<string name="jh_pref_header_general">General</string>

	<string name="jh_pref_title_social_recommendations">Enable social recommendations</string>
	<string name="jh_pref_description_social_recommendations">Recommendations for people to contact
		based on your message history
	</string>

	<string name="jh_pref_title_display_name">Display name</string>
	<string name="jh_pref_default_display_name">John Smith</string>

	<string name="jh_pref_title_add_friends_to_messages">Add friends to messages</string>


	<string-array name="jh_pref_example_list_titles">
		<item>Always</item>
		<item>When possible</item>
		<item>Never</item>
	</string-array>
	<string-array name="jh_pref_example_list_values">
		<item>1</item>
		<item>0</item>
		<item>-1</item>
	</string-array>

	<!-- Example settings for Data & Sync -->
	<string name="jh_pref_header_data_sync">Data &amp; sync</string>

	<string name="jh_pref_title_sync_frequency">Sync frequency</string>
	<string-array name="jh_pref_sync_frequency_titles">
		<item>15 minutes</item>
		<item>30 minutes</item>
		<item>1 hour</item>
		<item>3 hours</item>
		<item>6 hours</item>
		<item>Never</item>
	</string-array>
	<string-array name="jh_pref_sync_frequency_values">
		<item>15</item>
		<item>30</item>
		<item>60</item>
		<item>180</item>
		<item>360</item>
		<item>-1</item>
	</string-array>

	<string name="jh_pref_title_system_sync_settings">System sync settings</string>

	<!-- Example settings for Notifications -->
	<string name="jh_pref_header_notifications">Notifications</string>

	<string name="jh_pref_title_new_message_notifications">New message notifications</string>

	<string name="jh_pref_title_ringtone">Ringtone</string>
	<string name="jh_pref_ringtone_silent">Silent</string>

	<string name="jh_pref_title_vibrate" translatable="false">Vibrate</string>
	<string name="jh_btn_yes">OK</string>
	<string name="jh_btn_no">NO</string>
	<string name="jh_schedule_progress_content">Downloading%1$d</string>
	<string name="jh_intro_skip">SKIP</string>
	<string name="jh_intro_done">DONE</string>
	<string name="jh_app_exit">Press back again to exit %1$s</string>
	<string name="jh_settings_common_label">Common settings</string>
	<string name="jh_settings_show_ads">is show ads</string>
	<string name="jh_settings_show_ads_desc">Please help us improve</string>
	<string name="jh_settings_clear_cache">Clear cache</string>
	<string name="jh_preference_about">About</string>
	<string name="jh_preference_about_detail">Scan QR code, your friend can download %1$s client
	</string>
	<string name="jh_preference_copyright">Copyright2004-2016\n%1$s%2$s all right reserved</string>
	<string name="jh_preference_logo_desc">logo</string>
	<string name="jh_preference_qr_desc">QR code</string>
	<string name="jh_site_url" translatable="false">jiahelogistic.com</string>
	<string name="jh_title_activity_about">About</string>
	<string name="jh_preference_upgrade">Upgrade</string>
	<string name="jh_preference_upgrading">Getting message of newest version</string>
	<string name="jh_btn_settings_exit">Exit %1$s</string>
	<string name="jh_settings_allow_notify">Allow Notify</string>
	<string name="jh_settings_allow_notify_desc">Allow Notify</string>

</resources>
