<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	<SwitchPreference
		android:key="jh_settings_open_ads"
	    android:title="@string/jh_settings_show_ads"
	    android:summary="@string/jh_settings_show_ads_desc"
	    android:defaultValue="true"
		/>

	<SwitchPreference
		android:key="jh_settings_allow_notify"
		android:title="@string/jh_settings_allow_notify"
		android:summary="@string/jh_settings_allow_notify_desc"
		android:defaultValue="true"
	/>

	<PreferenceCategory
		android:title="@string/jh_settings_common_label"
		android:key="pref_key_storage_settings">

		<com.jiahelogistic.widget.NormalPreference
			android:key="clean_cache"
			android:title="@string/jh_settings_clear_cache"/>

		<Preference
			android:key="upgrade"
			android:title="@string/jh_preference_upgrade"/>

		<PreferenceScreen
			android:title="@string/jh_preference_about">
			<intent
				android:action="android.intent.action.MAIN"
				android:targetPackage="com.jiahelogistic"
				android:targetClass="com.jiahelogistic.activity.AboutUsActivity" />
		</PreferenceScreen>

	</PreferenceCategory>
</PreferenceScreen>