<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.jiahelogistic.activity.AboutUsActivity">

	<ImageView
		android:id="@+id/jh_preference_logo"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:layout_marginTop="15dp"
		android:layout_centerHorizontal="true"
		android:contentDescription="@string/jh_preference_logo_desc"
		android:src="@drawable/dialog_warning"/>

	<ImageView
		android:id="@+id/jh_preference_qr_code"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/jh_preference_logo"
		android:layout_centerHorizontal="true"
		android:layout_gravity="center_horizontal"
		android:contentDescription="@string/jh_preference_qr_desc"
		android:src="@drawable/qr_code"/>

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="15dp"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/jh_preference_qr_code"
		android:text="@string/jh_preference_about_detail"/>

	<TextView
		android:id="@+id/jh_preference_about_us_right"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="15dp"
		android:gravity="center"
		android:layout_gravity="center_horizontal"
		android:text="@string/jh_preference_copyright"/>
</RelativeLayout>
